--- a/base.tex
+++ b/base.tex
@@ -1,56 +1,110 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{6}{c}}
+\begin{tabular}{l*{3}{c}}
 \hline\hline
-          &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}\\
-          &\multicolumn{1}{c}{logy}&\multicolumn{1}{c}{logy}&\multicolumn{1}{c}{logy}&\multicolumn{1}{c}{logy}&\multicolumn{1}{c}{logy}&\multicolumn{1}{c}{logy}\\
+          &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}\\
+          &\multicolumn{1}{c}{logy}&\multicolumn{1}{c}{logy}&\multicolumn{1}{c}{logy}\\
 \hline
-oretot    &     0.02\sym{***}&     0.02\sym{***}&     0.02\sym{***}&     0.02\sym{***}&     0.02\sym{***}&     0.02\sym{***}\\
-          &   (0.00)         &   (0.00)         &   (0.00)         &   (0.00)         &   (0.00)         &   (0.00)         \\
+overall   &                  &                  &                  \\
+group\_1   &     9.83\sym{***}&     9.83\sym{***}&     9.83\sym{***}\\
+          &   (0.01)         &   (0.01)         &   (0.01)         \\
 [1em]
-femmina   &    -0.27\sym{***}&    -0.23\sym{***}&    -0.27\sym{***}&    -0.23\sym{***}&    -0.27\sym{***}&    -0.23\sym{***}\\
-          &   (0.03)         &   (0.01)         &   (0.03)         &   (0.01)         &   (0.03)         &   (0.01)         \\
+group\_2   &     9.48\sym{***}&     9.48\sym{***}&     9.48\sym{***}\\
+          &   (0.02)         &   (0.02)         &   (0.02)         \\
 [1em]
-eta       &     0.05\sym{***}&     0.06\sym{***}&     0.05\sym{***}&     0.06\sym{***}&     0.05\sym{***}&     0.06\sym{***}\\
-          &   (0.01)         &   (0.00)         &   (0.01)         &   (0.00)         &   (0.01)         &   (0.00)         \\
+difference&     0.35\sym{***}&     0.35\sym{***}&     0.35\sym{***}\\
+          &   (0.02)         &   (0.02)         &   (0.02)         \\
 [1em]
-yedu      &     0.03\sym{***}&     0.05\sym{***}&     0.03\sym{***}&     0.05\sym{***}&     0.03\sym{***}&     0.05\sym{***}\\
-          &   (0.00)         &   (0.00)         &   (0.00)         &   (0.00)         &   (0.00)         &   (0.00)         \\
+explained &     0.11\sym{***}&     0.11\sym{***}&     0.11\sym{***}\\
+          &   (0.01)         &   (0.01)         &   (0.01)         \\
 [1em]
-figli     &     0.05         &    -0.04\sym{***}&     0.06         &    -0.04\sym{***}&     0.06         &    -0.04\sym{***}\\
-          &   (0.03)         &   (0.01)         &   (0.03)         &   (0.01)         &   (0.03)         &   (0.01)         \\
-[1em]
-whitecollar&     0.75\sym{*}  &     0.18         &     0.75\sym{*}  &     0.18         &     0.76\sym{*}  &     0.18         \\
-          &   (0.32)         &   (0.10)         &   (0.32)         &   (0.10)         &   (0.32)         &   (0.10)         \\
-[1em]
-manager   &     1.53\sym{***}&     0.62\sym{***}&     1.51\sym{***}&     0.62\sym{***}&     1.53\sym{***}&     0.62\sym{***}\\
-          &   (0.33)         &   (0.10)         &   (0.33)         &   (0.10)         &   (0.33)         &   (0.10)         \\
-[1em]
-northeast &     0.08\sym{*}  &     0.05\sym{***}&     0.07         &     0.05\sym{***}&     0.10\sym{**} &     0.06\sym{***}\\
-          &   (0.04)         &   (0.01)         &   (0.04)         &   (0.01)         &   (0.04)         &   (0.02)         \\
-[1em]
-northwest &     0.12\sym{**} &     0.05\sym{**} &     0.11\sym{*}  &     0.05\sym{**} &     0.13\sym{**} &     0.05\sym{***}\\
-          &   (0.05)         &   (0.02)         &   (0.04)         &   (0.02)         &   (0.04)         &   (0.02)         \\
-[1em]
-south     &    -0.09         &    -0.17\sym{***}&    -0.09         &    -0.17\sym{***}&    -0.08         &    -0.17\sym{***}\\
-          &   (0.06)         &   (0.01)         &   (0.06)         &   (0.01)         &   (0.06)         &   (0.01)         \\
-[1em]
-voteshare &    -0.60\sym{*}  &    -0.16         &                  &                  &                  &                  \\
-          &   (0.25)         &   (0.09)         &                  &                  &                  &                  \\
-[1em]
-dis       &    -0.15\sym{***}&                  &    -0.16\sym{***}&                  &    -0.15\sym{***}&                  \\
-          &   (0.03)         &                  &   (0.03)         &                  &   (0.03)         &                  \\
-[1em]
-aboveshare&                  &                  &    -0.07\sym{*}  &    -0.02\sym{*}  &    -0.02         &    -0.01         \\
-          &                  &                  &   (0.03)         &   (0.01)         &   (0.04)         &   (0.01)         \\
-[1em]
-extrashare&                  &                  &                  &                  &    -0.11\sym{**} &    -0.03\sym{**} \\
-          &                  &                  &                  &                  &   (0.04)         &   (0.01)         \\
+unexplained&     0.24\sym{***}&     0.24\sym{***}&     0.24\sym{***}\\
+          &   (0.02)         &   (0.02)         &   (0.02)         \\
 \hline
-\(N\)     &     1423         &    12701         &     1423         &    12701         &     1423         &    12701         \\
-\(R^{2}\) &    0.407         &    0.467         &    0.406         &    0.467         &    0.409         &    0.467         \\
+explained &                  &                  &                  \\
+oretot    &    -0.01         &    -0.01         &    -0.01         \\
+          &   (0.01)         &   (0.01)         &   (0.01)         \\
+[1em]
+femmina   &     0.01\sym{*}  &     0.01\sym{*}  &     0.01\sym{*}  \\
+          &   (0.00)         &   (0.00)         &   (0.00)         \\
+[1em]
+eta       &     0.18\sym{***}&     0.18\sym{***}&     0.18\sym{***}\\
+          &   (0.02)         &   (0.02)         &   (0.02)         \\
+[1em]
+yedu      &     0.09\sym{***}&     0.09\sym{***}&     0.09\sym{***}\\
+          &   (0.01)         &   (0.01)         &   (0.01)         \\
+[1em]
+figli     &    -0.00\sym{**} &    -0.00\sym{**} &    -0.00\sym{**} \\
+          &   (0.00)         &   (0.00)         &   (0.00)         \\
+[1em]
+whitecollar&     0.01\sym{***}&     0.01\sym{***}&     0.01\sym{***}\\
+          &   (0.00)         &   (0.00)         &   (0.00)         \\
+[1em]
+manager   &     0.02\sym{***}&     0.02\sym{***}&     0.02\sym{***}\\
+          &   (0.00)         &   (0.00)         &   (0.00)         \\
+[1em]
+northeast &    -0.01\sym{**} &    -0.01\sym{***}&    -0.01\sym{***}\\
+          &   (0.00)         &   (0.00)         &   (0.00)         \\
+[1em]
+northwest &    -0.00         &    -0.00\sym{*}  &    -0.00\sym{*}  \\
+          &   (0.00)         &   (0.00)         &   (0.00)         \\
+[1em]
+south     &    -0.04\sym{***}&    -0.04\sym{***}&    -0.04\sym{***}\\
+          &   (0.00)         &   (0.00)         &   (0.00)         \\
+[1em]
+voteshare &    -0.00         &                  &                  \\
+          &   (0.00)         &                  &                  \\
+[1em]
+aboveshare&                  &     0.00\sym{*}  &     0.00         \\
+          &                  &   (0.00)         &   (0.00)         \\
+[1em]
+extrashare&                  &                  &     0.00\sym{**} \\
+          &                  &                  &   (0.00)         \\
+\hline
+unexplained&                  &                  &                  \\
+oretot    &    -0.15\sym{**} &    -0.15\sym{**} &    -0.14\sym{**} \\
+          &   (0.05)         &   (0.05)         &   (0.05)         \\
+[1em]
+femmina   &     0.00         &     0.00         &     0.00         \\
+          &   (0.01)         &   (0.01)         &   (0.01)         \\
+[1em]
+eta       &     0.48         &     0.51         &     0.47         \\
+          &   (0.41)         &   (0.41)         &   (0.41)         \\
+[1em]
+yedu      &     0.21\sym{***}&     0.21\sym{***}&     0.21\sym{***}\\
+          &   (0.04)         &   (0.04)         &   (0.04)         \\
+[1em]
+figli     &    -0.05\sym{**} &    -0.06\sym{**} &    -0.05\sym{**} \\
+          &   (0.02)         &   (0.02)         &   (0.02)         \\
+[1em]
+whitecollar&    -0.01\sym{**} &    -0.01\sym{**} &    -0.01\sym{**} \\
+          &   (0.00)         &   (0.00)         &   (0.00)         \\
+[1em]
+manager   &    -0.01\sym{***}&    -0.01\sym{***}&    -0.01\sym{***}\\
+          &   (0.00)         &   (0.00)         &   (0.00)         \\
+[1em]
+northeast &    -0.00         &    -0.00         &    -0.02         \\
+          &   (0.02)         &   (0.02)         &   (0.02)         \\
+[1em]
+northwest &    -0.01         &    -0.01         &    -0.02         \\
+          &   (0.01)         &   (0.01)         &   (0.01)         \\
+[1em]
+south     &    -0.01         &    -0.01         &    -0.01         \\
+          &   (0.01)         &   (0.01)         &   (0.01)         \\
+[1em]
+voteshare &     0.12\sym{*}  &                  &                  \\
+          &   (0.05)         &                  &                  \\
+[1em]
+aboveshare&                  &     0.04         &     0.00         \\
+          &                  &   (0.02)         &   (0.01)         \\
+[1em]
+extrashare&                  &                  &     0.04\sym{**} \\
+          &                  &                  &   (0.02)         \\
+\hline
+\(N\)     &    14124         &    14124         &    14124         \\
+\(R^{2}\) &                  &                  &                  \\
 \hline\hline
-\multicolumn{7}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{7}{l}{\footnotesize \sym{*} \(p<0.05\), \sym{**} \(p<0.01\), \sym{***} \(p<0.001\)}\\
+\multicolumn{4}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{4}{l}{\footnotesize \sym{*} \(p<0.05\), \sym{**} \(p<0.01\), \sym{***} \(p<0.001\)}\\
 \end{tabular}
 }
